// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Snapshots > renders completed state correctly 1`] = `
<div
  class="sidebar mode-review"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="review-mode"
  >
    <div
      class="session-summary"
    >
      <span
        class="summary-check"
      >
        ✓
      </span>
      <span
        class="summary-label"
      >
        Complete
      </span>
      <span
        class="summary-duration"
      >
        0:30
      </span>
      <span
        class="summary-quality quality-unknown"
      >
        Unknown
      </span>
      <span
        class="summary-model"
        title="Transcription: Local"
      >
        💻
         
        small
      </span>
    </div>
    <section
      class="review-transcript-section"
    >
      <div
        class="review-section-header"
      >
        <button
          aria-expanded="true"
          aria-label="Collapse Transcript section"
          class="review-section-header-left"
        >
          <span
            class="chevron "
          >
            ▼
          </span>
          <span
            class="review-section-title"
          >
            Transcript
          </span>
        </button>
        <div
          class="review-section-actions"
        >
          <button
            class="btn-small "
          >
            Edit
          </button>
          <button
            class="btn-small copy-btn "
          >
            Copy
          </button>
        </div>
      </div>
      <div
        class="review-transcript-content"
      >
        <div
          class="transcript-display"
        >
          <p>
            Final transcript text here.
          </p>
        </div>
      </div>
    </section>
    <section
      class="review-soap-section"
    >
      <div
        class="review-section-header"
      >
        <button
          aria-expanded="true"
          aria-label="Collapse SOAP Note section"
          class="review-section-header-left"
        >
          <span
            class="chevron "
          >
            ▼
          </span>
          <span
            class="review-section-title"
          >
            SOAP Note
          </span>
        </button>
      </div>
      <div
        class="review-soap-content"
      >
        <button
          class="btn-generate"
          disabled=""
        >
          Ollama not connected
        </button>
      </div>
    </section>
    <div
      class="action-bar"
    >
      <button
        class="btn-primary"
      >
        New Session
      </button>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders error state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="ready-mode"
  >
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start recording"
      class="start-button-large ready"
    >
      <span
        class="start-icon"
      />
      <span
        class="start-label"
      >
        START
      </span>
    </button>
    <div
      class="ready-status"
    >
      <span
        class="status-error"
      >
        Microphone access denied
      </span>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders idle state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot idle"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="ready-mode"
  >
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start recording"
      class="start-button-large ready"
    >
      <span
        class="start-icon"
      />
      <span
        class="start-label"
      >
        START
      </span>
    </button>
    <div
      class="ready-status"
    >
      <span
        class="status-ready"
      >
        Ready to record
      </span>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders recording state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="recording-indicator"
    >
      <span
        class="rec-dot"
      />
      <span
        class="rec-text"
      >
        REC
      </span>
      <div
        class="spacer"
      />
      <button
        aria-label="Audio quality status - tap for details"
        class="status-bars good"
      >
        <span
          class="bar"
        />
        <span
          class="bar"
        />
        <span
          class="bar"
        />
      </button>
    </div>
    <div
      class="timer-large"
    >
      0:00
    </div>
    <button
      aria-label="Stop recording"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        STOP
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="model-indicator"
    >
      💻
       
      small
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders stopping state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot stopping"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="recording-indicator"
    >
      <span
        class="rec-dot"
      />
      <span
        class="rec-text"
      >
        REC
      </span>
      <div
        class="spacer"
      />
      <button
        aria-label="Audio quality status - tap for details"
        class="status-bars good"
      >
        <span
          class="bar"
        />
        <span
          class="bar"
        />
        <span
          class="bar"
        />
      </button>
    </div>
    <div
      class="timer-large"
    >
      0:00
    </div>
    <button
      aria-label="Stopping..."
      class="stop-button stopping"
      disabled=""
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        Stopping...
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="model-indicator"
    >
      💻
       
      small
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders with transcript correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="recording-indicator"
    >
      <span
        class="rec-dot"
      />
      <span
        class="rec-text"
      >
        REC
      </span>
      <div
        class="spacer"
      />
      <button
        aria-label="Audio quality status - tap for details"
        class="status-bars good"
      >
        <span
          class="bar"
        />
        <span
          class="bar"
        />
        <span
          class="bar"
        />
      </button>
    </div>
    <div
      class="timer-large"
    >
      0:00
    </div>
    <button
      aria-label="Stop recording"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        STOP
      </span>
    </button>
    <button
      class="transcript-toggle active"
    >
      Hide Transcript
    </button>
    <div
      class="transcript-preview"
    >
      <div
        class="transcript-preview-text"
      >
        Hello, this is a test transcription.

This is the second paragraph.
      </div>
      <div
        class="transcript-preview-draft"
      >
        Still speaking...
      </div>
    </div>
    <div
      class="model-indicator"
    >
      💻
       
      small
    </div>
  </div>
</div>
`;
